
2020-01-01  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, field.c (copy_into_field), tree.h, config.def:
	  FR #193 implementation of SAME AS
	* cobc.c: Copyright year update

2020-01-01  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Updates for ODBC interface

2019-12-28  Edward Hart <edward.dan.hart@gmail.com>

	* config.c, config.def, ppparse.y, pplex.l: added ASSIGN directive and new option
	  implict-assign-dynamic-var (see bug #571).
	* config.c: added options external (= ibm) and dynamic (= mf) to
	  assign-clause.
	* typeck.c (cb_build_assignment_name): refactored.

2019-12-16  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Outputs 'WHEN' conditions in 'posfix' sequence

2019-12-15  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: bug #543 check for condition-name in ADDRESS OF

2019-12-03  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: minor refactoring for file related output
	* parser.y: minor refactoring - use of set_current_field to remove
	  duplicated code, limit scope of some variables
	* parser.y: new identifier_field (checked field-identifier),
	  adjustment of some msgIds (obviously not part of any test before)

2019-12-01  Ron Norman <rjn@inglenet.com>

	* field.c, sqlxfdgen.c: Fix up some compile warnings
	  moved cb_parse_xfd from field.c to sqlxfdgen.c

2019-11-30  Ron Norman <rjn@inglenet.com> 

	* sqlxfdgen.c: Starter version to create DDL/XD files from record
	  descriptions and $XFD directives (more to come)

2019-11-28  Ron Norman <rjn@inglenet.com>

	* Updates to prepare framework for generated
	  an exernal file description and SQL
	  and adding support for ODBC/OCI use for INDEXED file

2019-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_key_components): extracted
	  from (output_file_initialization)
	* codegen.c (perform_label): minor refactoring
	* codgenc.c: call output_storage instead of output where the result is
	  fixed to be in the header